<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_padding12"
        android:paddingHorizontal="@dimen/activity_padding12">

        <include layout="@layout/layout_handle"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/mainTitle"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_padding12"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/change_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MyTheme.TextInputLayoutStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding12"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_outline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/textSizeLarge" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewPassword"
            style="@style/Widget.MyTheme.TextInputLayoutStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding12"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_outline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/textSizeLarge" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            style="@style/btnSmall"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_padding12"
            android:text="@string/submit"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:fontFamily="@font/font_bold"
            android:includeFontPadding="false"
            android:padding="@dimen/activity_padding8"
            android:text="@string/txtCancel"
            android:textColor="@color/colorListingHeading"
            android:textSize="@dimen/textSizeMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnYes" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_padding4" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>